# EDM

./: .gitignore  README.md  demo_single_pair.ipynb  environment.yaml  requirements.txt  runtime_single_pair.py  test.py  train.py
configs/data/: base.py  megadepth_test_1500.py  megadepth_trainval_832.py  scannet_test_1500.py  scannet_trainval.py  synthetic_homography.py
configs/edm/indoor/: edm_base.py
configs/edm/outdoor/: edm_base.py
deploy/: export_onnx.py  readme.md  requirements_deploy.txt  run_onnx.py
deploy/edm_onnx_cpp/: CMakeLists.txt  README.md  demo.cpp  demo.sh
deploy/edm_onnx_cpp/edm/: edm.cpp  edm.h
scripts/reproduce_test/: indoor.sh  outdoor.sh  outdoor_loransac.sh
scripts/reproduce_train/: outdoor.sh
src/config/: default.py
src/datasets/: megadepth.py  sampler.py  scannet.py  synthetic_homography.py
src/edm/: __init__.py  edm.py
src/edm/backbone/: resnet.py
src/edm/head/: coarse_matching.py  fine_matching.py
src/edm/neck/: __init__.py  neck.py
src/edm/neck/loftr_module/: transformer.py
src/edm/utils/: geometry.py  supervision.py
src/lightning/: data.py  lightning_edm.py
src/losses/: edm_loss.py
src/optimizers/: __init__.py
src/utils/: comm.py  dataloader.py  dataset.py  metrics.py  misc.py  plotting.py  profiler.py  warppers.py  warppers_utils.py
